<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_city" android:title="@string/action_city"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_marker" android:title="@string/action_marker"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_shape" android:title="@string/action_shape"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_street" android:title="@string/action_street"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
